
Wed Jun 18 19:08:40 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* io.c: never add write permission for group or others in
	SetFileAttributes ().

2003-06-17  Dick Porter  <dick@ximian.com>

	* io.c (SetFileAttributes): Implement the ReadOnly attribute, and
	ignore the unsupported ones ("fixes" bug 44977).

2003-06-17  Lluis Sanchez Gual  <lluis@ximian.com>

	* misc.c: fix bug in _wapi_calc_timeout. It gave wrong values for
	  high ms values (there was an overflow).

2003-06-17  Zoltan Varga  <vargaz@freemail.hu>

	* system.h (struct _WapiSystemInfo ): Fix warnings when using gcc-3.3.

2003-06-11  Dick Porter  <dick@ximian.com>

	* shared.c: Fix shared directory creation.  Patch from
	Pablo Baena <pbaena@uol.com.ar>

2003-06-10  Dick Porter  <dick@ximian.com>

	* atomic.c: Delete the useless compile warning

2003-06-09  Dick Porter  <dick@ximian.com>

	* daemon.c: Lookup env as a string array.  Fixes bug 44289.  Also
	make setting the process handle value in the environment actually
	work.

	* processes.c: Pretty up the process name, if it happens to be
	"mono" such as when another mono process forks "mono foo.exe"

2003-06-05  Dick Porter  <dick@ximian.com>

	* processes.c (process_set_current): Don't do an expensive handle
	search at application startup, check the environment to see if the
	process handle has already been created.

	* io.c: Don't do an expensive handle search when creating stdin,
	stdout and stderr handles, just create them all the first time one
	is requested.

	* wapi-private.h:
	* shared.c:
	* shared.h:
	* handles.c:
	* handles-private.h:
	* daemon-messages.h:
	* daemon-private.h:
	* daemon.c: Support for "unlimited" number of handles and scratch
	data.

	Speed up application startup by passing process handle in the
	environment, rather than let the app scan all handles (which gets
	really slow when there are more than a few thousand to check.)

	Initialise some structs passed to syscalls, noticed by valgrind.
	
